--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.39.3",
     "react-scroll": "^1.8.9",
     "sass": "^1.64.2",
+    "swiper": "^11.2.8",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
